--- a/decraft/index.html
+++ b/decraft/index.html
@@ -132,114 +132,166 @@
 
       <div class="col s12 m4">
         <div class="card">
+          <div class="card-content">
+            <p>Модель: «CLOVER»</p>
+          </div>
           <div class="card-image">
             <img src="media/img/model1.jpg">
-            <span class="card-title">Модель: «CLOVER»</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>3600 руб/м²</p>
           </div>
           <div class="card-action center">
             <a class="waves-effect waves-light btn cyan white-text"><i class="material-icons left">add_shopping_cart</i>Заказать</a>
+          </div>
+          <div class="preview">
+            <div class="img"><img src="media/img/img1.png"></div>
+            <div class="sketch"><img src="media/img/sketch1.png"></div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m4">
         <div class="card">
+          <div class="card-content">
+            <p>Модель: «CLOVER»</p>
+          </div>
           <div class="card-image">
             <img src="media/img/model1.jpg">
-            <span class="card-title">Модель: «CLOVER»</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>3600 руб/м²</p>
           </div>
           <div class="card-action center">
             <a class="waves-effect waves-light btn cyan white-text"><i class="material-icons left">add_shopping_cart</i>Заказать</a>
+          </div>
+          <div class="preview">
+            <div class="img"><img src="media/img/img1.png"></div>
+            <div class="sketch"><img src="media/img/sketch1.png"></div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m4">
         <div class="card">
+          <div class="card-content">
+            <p>Модель: «CLOVER»</p>
+          </div>
           <div class="card-image">
             <img src="media/img/model1.jpg">
-            <span class="card-title">Модель: «CLOVER»</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>3600 руб/м²</p>
           </div>
           <div class="card-action center">
             <a class="waves-effect waves-light btn cyan white-text"><i class="material-icons left">add_shopping_cart</i>Заказать</a>
+          </div>
+          <div class="preview">
+            <div class="img"><img src="media/img/img1.png"></div>
+            <div class="sketch"><img src="media/img/sketch1.png"></div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m4">
         <div class="card">
+          <div class="card-content">
+            <p>Модель: «CLOVER»</p>
+          </div>
           <div class="card-image">
             <img src="media/img/model1.jpg">
-            <span class="card-title">Модель: «CLOVER»</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>3600 руб/м²</p>
           </div>
           <div class="card-action center">
             <a class="waves-effect waves-light btn cyan white-text"><i class="material-icons left">add_shopping_cart</i>Заказать</a>
+          </div>
+          <div class="preview">
+            <div class="img"><img src="media/img/img1.png"></div>
+            <div class="sketch"><img src="media/img/sketch1.png"></div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m4">
         <div class="card">
+          <div class="card-content">
+            <p>Модель: «CLOVER»</p>
+          </div>
           <div class="card-image">
             <img src="media/img/model1.jpg">
-            <span class="card-title">Модель: «CLOVER»</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>3600 руб/м²</p>
           </div>
           <div class="card-action center">
             <a class="waves-effect waves-light btn cyan white-text"><i class="material-icons left">add_shopping_cart</i>Заказать</a>
+          </div>
+          <div class="preview">
+            <div class="img"><img src="media/img/img1.png"></div>
+            <div class="sketch"><img src="media/img/sketch1.png"></div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m4">
         <div class="card">
+          <div class="card-content">
+            <p>Модель: «CLOVER»</p>
+          </div>
           <div class="card-image">
             <img src="media/img/model1.jpg">
-            <span class="card-title">Модель: «CLOVER»</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>3600 руб/м²</p>
           </div>
           <div class="card-action center">
             <a class="waves-effect waves-light btn cyan white-text"><i class="material-icons left">add_shopping_cart</i>Заказать</a>
+          </div>
+          <div class="preview">
+            <div class="img"><img src="media/img/img1.png"></div>
+            <div class="sketch"><img src="media/img/sketch1.png"></div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m4">
         <div class="card">
+          <div class="card-content">
+            <p>Модель: «CLOVER»</p>
+          </div>
           <div class="card-image">
             <img src="media/img/model1.jpg">
-            <span class="card-title">Модель: «CLOVER»</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>3600 руб/м²</p>
           </div>
           <div class="card-action center">
             <a class="waves-effect waves-light btn cyan white-text"><i class="material-icons left">add_shopping_cart</i>Заказать</a>
+          </div>
+          <div class="preview">
+            <div class="img"><img src="media/img/img1.png"></div>
+            <div class="sketch"><img src="media/img/sketch1.png"></div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m4">
         <div class="card">
+          <div class="card-content">
+            <p>Модель: «CLOVER»</p>
+          </div>
           <div class="card-image">
             <img src="media/img/model1.jpg">
-            <span class="card-title">Модель: «CLOVER»</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>3600 руб/м²</p>
@@ -247,8 +299,14 @@
           <div class="card-action center">
             <a class="waves-effect waves-light btn cyan white-text"><i class="material-icons left">add_shopping_cart</i>Заказать</a>
           </div>
+          <div class="preview">
+            <div class="img"><img src="media/img/img1.png"></div>
+            <div class="sketch"><img src="media/img/sketch1.png"></div>
+          </div>
         </div>
       </div>
+
+      
     </div>
   </section>
 
