--- a/decraft/index.html
+++ b/decraft/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="media/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="media/css/main.css">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
   <title>webbberStudio</title>
 </head>
 <body>
@@ -25,13 +25,13 @@
     <div id="nav-wrapper">
       <nav class="col s12 center">
         <ul>
-          <li><a href="#">О нас</a></li>
-          <li><a href="#">Каталог панелей</a></li>
-          <li><a href="#">Основные преимущества</a></li>
-          <li><a href="#">Полезная информация</a></li>
-          <li><a href="#">Отзывы</a></li>
-          <li><a href="#">Сертификаты</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="#about-us">О нас</a></li>
+          <li><a href="#catalog">Каталог</a></li>
+          <li><a href="#advantages">Преимущества</a></li>
+          <li><a href="#info">Полезная нформация</a></li>
+          <li><a href="#certificate">Сертификаты</a></li>
+          <li><a href="#comments">Отзывы</a></li>
+          <li><a href="#footer">Контакты</a></li>
         </ul>
       </nav>
     </div>
@@ -40,7 +40,7 @@
 
   <section id="slider" class="row">
     <div class="container">
-    <div class="desc card col s12 m9 offset-m3 l7 offset-l5">
+      <div class="desc card col s12 m9 offset-m3 l7 offset-l5">
         <p>ДЕКОРАТИВНЫЕ</p>
         <p>ГИПСОВЫЕ</p>
         <p>ПАНЕЛИ <span>3D</span></p>
@@ -117,9 +117,9 @@
             <img src="media/img/model1.jpg">
             <span class="card-title"></span>
             <div class="preview">
-            <div class="img"><img src="media/img/img1.png"></div>
-            <div class="sketch"><img src="media/img/sketch1.png"></div>
-          </div>
+              <div class="img"><img src="media/img/img1.png"></div>
+              <div class="sketch"><img src="media/img/sketch1.png"></div>
+            </div>
           </div>
           <div class="card-content">
             <p>3600 руб/м²</p>
@@ -317,7 +317,7 @@
       <div class="col s12 m4 center">
         <div class="ico"></div>
         <p class="title">
-          Эффект<br>Wow
+          WOW<br>Эффект
         </p>
         <p class="desc">
           Наши панели становятся стильным 
@@ -458,78 +458,6 @@
     </div>
   </section>
 
-  <section id="comments" class="row">
-    <div class="container">
-      <h2 class="center">ОТЗЫВЫ ЗАКАЗЧИКОВ</h2>
-      <div class="col s12 m6">
-        <div class="card-panel teal">
-          <div class="avatar"></div>
-          <p>Семья Мазур,  г. Севастополь</p>
-          <span class="white-text">
-            «Была в гостях у подруги в Москве и увидела у неё в доме 
-            отделку из 3D панелей. Мне очень понравилось и я решила, 
-            что по приезду обязательно сделаю такой же декор дома. 
-            К сожалению, я не смогла найти нигде в Крыму такого 
-            ассортимента, как в компании Декрафт. Заказала 16 кв 
-            метров - доставили бесплатно! Муж сам положил панели, 
-            это очень просто. Мы очень довольны результатом! Спасибо 
-            за умение работать с клиентами!»
-          </span>
-        </div>
-      </div>
-
-      <div class="col s12 m6">
-        <div class="card-panel teal">
-          <div class="avatar"></div>
-          <p>Василий Коркин,  г. Симферополь</p>
-          <span class="white-text">
-            «Решили с женой в доме сделать ремонт, современный. 
-            Начали искать варинты отделочных материалов и 
-            наткнулись в интернете на гипсовые панели. Из России 
-            ждать заказ долго, хотели найти в Крыму. И нашли, в 
-            Севастополе компанию Decraft. Сделали заказ, в течении 
-            нескольких дней панели уже доставили к нам домой, всё 
-            очень прилично. Ремонт сделали быстро. Спасибо за 
-            качественную продукцию.»
-          </span>
-        </div>
-      </div>
-
-      <div class="col s12 m6">
-        <div class="card-panel teal">
-          <div class="avatar"></div>
-          <p>Андрей Степнев,<br>управляющий</p>
-          <span class="white-text">
-            «Срочно требовалось отреставрировать несущую стену в 
-            клинике стоматологии площадью 23м. Искали что-нибудь 
-            новое, креативное, солидное. Наткнулись на 3d панели на 
-            сайте decraft.pro Заказали, установили. Вид неожиданно 
-            потрясающий! Если грамотно поработать с подсветкой, 
-            то можно поднять статус заведения в разы. Спасибо 
-            ребятам за подробные консультации!»
-          </span>
-        </div>
-      </div>
-
-      <div class="col s12 m6">
-        <div class="card-panel teal">
-          <div class="avatar"></div>
-          <p>Илья Морозов,<br>художник</p>
-          <span class="white-text">
-            «Уже не знал, как преобразить свою квартиру, без крупных
-            в ложений. Узнал о 3D панелях и решил использовать их. 
-            Нашел через интернет фирму Декрафт, приехал к ним в офис, 
-            потрогал своими руками панели, очень приятный материал
-            на ощупь. Подобрал рисунок, заказал. Через два дня я уже 
-            затеял ремонт, установил панели и понял, что остальной 
-            ремонт уже не актуален, квартира приобрела очень стильный 
-            и привлекательный облик. Я очень доволен.»
-          </span>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <div id="certificate" class="row" >
     <div class="container">
       <h2 class="center">Наши сертификаты</h2>
@@ -537,7 +465,7 @@
       <div class="col s12 m4">
         <div class="card">
           <div class="card-image">
-            <img src="media/img/certificate1.png">
+            <img class="materialboxed" width="650" src="media/img/certificate1.png">
           </div>
         </div>
       </div>
@@ -545,7 +473,7 @@
       <div class="col s12 m4">
         <div class="card">
           <div class="card-image">
-            <img src="media/img/certificate2.png">
+            <img class="materialboxed" width="650" src="media/img/certificate2.png">
           </div>
         </div>
       </div>
@@ -553,13 +481,93 @@
       <div class="col s12 m4">
         <div class="card">
           <div class="card-image">
-            <img src="media/img/certificate3.png">
+            <img class="materialboxed"  src="media/img/certificate3.png">
           </div>
         </div>
       </div>
 
     </div>
   </div>
+
+  <section id="comments">
+    <h2 class="center">ОТЗЫВЫ ЗАКАЗЧИКОВ</h2>
+    <div class="row">
+      <div class="container">
+        <div> 
+          <div class="col s12 m4 offset-m1 l5 offset-l1">
+            <div class="card-panel">
+              <div class="avatar"></div>
+              <p>Семья Мазур,  г. Севастополь</p>
+              <span>
+                «Была в гостях у подруги в Москве и увидела у неё в доме 
+                отделку из 3D панелей. Мне очень понравилось и я решила, 
+                что по приезду обязательно сделаю такой же декор дома. 
+                К сожалению, я не смогла найти нигде в Крыму такого 
+                ассортимента, как в компании Декрафт. Заказала 16 кв 
+                метров - доставили бесплатно! Муж сам положил панели, 
+                это очень просто. Мы очень довольны результатом! Спасибо 
+                за умение работать с клиентами!»
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4 offset-m1 l5 offset-l1">
+          <div class="card-panel">
+            <div class="avatar"></div>
+            <p>Василий Коркин,  г. Симферополь</p>
+            <span>
+              «Решили с женой в доме сделать ремонт, современный. 
+              Начали искать варинты отделочных материалов и 
+              наткнулись в интернете на гипсовые панели. Из России 
+              ждать заказ долго, хотели найти в Крыму. И нашли, в 
+              Севастополе компанию Decraft. Сделали заказ, в течении 
+              нескольких дней панели уже доставили к нам домой, всё 
+              очень прилично. Ремонт сделали быстро. Спасибо за 
+              качественную продукцию.»
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="container">
+        <div class="col s12 m4 offset-m1 l5 offset-l1">
+          <div class="card-panel">
+            <div class="avatar"></div>
+            <p>Андрей Степнев,<br>управляющий</p>
+            <span>
+              «Срочно требовалось отреставрировать несущую стену в 
+              клинике стоматологии площадью 23м. Искали что-нибудь 
+              новое, креативное, солидное. Наткнулись на 3d панели на 
+              сайте decraft.pro Заказали, установили. Вид неожиданно 
+              потрясающий! Если грамотно поработать с подсветкой, 
+              то можно поднять статус заведения в разы. Спасибо 
+              ребятам за подробные консультации!»
+            </span>
+          </div>
+        </div>
+
+        <div class="col s12 m4 offset-m1 l5 offset-l1">
+          <div class="card-panel">
+            <div class="avatar"></div>
+            <p>Илья Морозов,<br>художник</p>
+            <span>
+              «Уже не знал, как преобразить свою квартиру, без крупных
+              в ложений. Узнал о 3D панелях и решил использовать их. 
+              Нашел через интернет фирму Декрафт, приехал к ним в офис, 
+              потрогал своими руками панели, очень приятный материал
+              на ощупь. Подобрал рисунок, заказал. Через два дня я уже 
+              затеял ремонт, установил панели и понял, что остальной 
+              ремонт уже не актуален, квартира приобрела очень стильный 
+              и привлекательный облик. Я очень доволен.»
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <div id="map"></div>
 
@@ -573,7 +581,7 @@
       </div>
     </div> 
   </div>
-  
+
   <div class="row">
     <div class="container">
       <div class="copy col s12 center ">
