--- a/decraft/index.html
+++ b/decraft/index.html
@@ -28,7 +28,7 @@
           <li><a href="#about-us">О нас</a></li>
           <li><a href="#catalog">Каталог</a></li>
           <li><a href="#advantages">Преимущества</a></li>
-          <li><a href="#info">Полезная нформация</a></li>
+          <li><a href="#info">Полезная иформация</a></li>
           <li><a href="#certificate">Сертификаты</a></li>
           <li><a href="#comments">Отзывы</a></li>
           <li><a href="#footer">Контакты</a></li>
@@ -458,7 +458,7 @@
     </div>
   </section>
 
-  <div id="certificate" class="row" >
+  <section id="certificate" class="row" >
     <div class="container">
       <h2 class="center">Наши сертификаты</h2>
 
@@ -487,7 +487,7 @@
       </div>
 
     </div>
-  </div>
+  </section>
 
   <section id="comments">
     <h2 class="center">ОТЗЫВЫ ЗАКАЗЧИКОВ</h2>
@@ -571,12 +571,11 @@
 
   <div id="map"></div>
 
-  <div id="footer" class="row">
-    <div class="container">
-      <div class="logo col s4"><a href="#">logo</a></div>
-      <div class="col s4"><p>+7 (978) 925 25 55</p></div>
-      <div class="col s4">
-        <p>ФАБРИКА ДЕКОРАТИВНЫХ МАТЕРИАЛОВ</p>
+  <div id="footer" class="row ">
+    <div class="container valign-wrapper">
+      <div class="logo col s4"><a href="#"><img src="media/img/logo-footer.png"></a></div>
+      <div class="col s4 valign"><p>+7 (978) 925 25 55</p></div>
+      <div class="col s4 valign">
         <p>Республика Крым, г. Севастополь</p>
       </div>
     </div> 
@@ -594,6 +593,7 @@
   </div> 
 
 </body>
+<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=D4-B1ka9Fejr88z86jCO4-C3UtNtBNSg&id=map&height=450"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="media/js/materialize.min.js"></script>
 <script src="media/js/main.js"></script>
