--- a/decraft/index.html
+++ b/decraft/index.html
@@ -17,7 +17,7 @@
         <div class="logo col s12 m6"><a href="#"><img src="media/img/logo.png"></a></div>
         <div class="info col s12 m6 right-align">
           <p>ФАБРИКА ДЕКОРАТИВНЫХ МАТЕРИАЛОВ</p>
-          <p>+7 (978) 925-25-55</p>
+          <p><i class="material-icons ">phone</i>+7 (978) 925-25-55</p>
         </div>
       </div>
     </div>
@@ -28,7 +28,7 @@
           <li><a href="#about-us">О нас</a></li>
           <li><a href="#catalog">Каталог</a></li>
           <li><a href="#advantages">Преимущества</a></li>
-          <li><a href="#info">Полезная иформация</a></li>
+          <li><a href="#info">Полезная информация</a></li>
           <li><a href="#certificate">Сертификаты</a></li>
           <li><a href="#comments">Отзывы</a></li>
           <li><a href="#footer">Контакты</a></li>
@@ -40,7 +40,7 @@
 
   <section id="slider" class="row">
     <div class="container">
-      <div class="desc card col s12 m9 offset-m3 l7 offset-l5">
+      <div class="desc card col s12 m8 offset-m4 l6 offset-l6">
         <p>ДЕКОРАТИВНЫЕ</p>
         <p>ГИПСОВЫЕ</p>
         <p>ПАНЕЛИ <span>3D</span></p>
@@ -72,36 +72,30 @@
     </div>
 
     <div class="row">
-      <div class="col s12 m6">
+      <div class="col s12 m4 center">
         <h5>Уникальный дизайн</h5>
         <p>
           В структуру компании входит собственное дизайнерско-конструкторское бюро, которое занимается разработкой уникальных узоров 3D панелей.
         </p>
       </div>
 
-      <div class="col s12 m6">
+      <div class="col s12 m4 center">
         <h5>Экологичность и безопасность</h5>
         <p>
           Наши панели производятся из высококачественного природного гипса, благодаря чему продукция компании DECRAFT отвечает самым современным требованиям пожарной и экологической безопасности.
         </p>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col s12 m6">
+      <div class="col s12 m4 center">
         <h5>Забота о потребителе</h5>
         <p>
           Мы нацелены на взаимовыгодное сотрудничество с нашими клиентами, приносящее только положительные эмоции и совместный стабильный рост.
         </p>
       </div>
+    </div>
 
-      <div class="col s12 m6">
-        <h5>Всё еще сомневаетесь?</h5>
-        <p>
-          Посмотрите наши гипсовые 3D панели.
-        </p>
-        <a href="#works" class="btn cyan" style="margin: 10px 0 0 0;"><i class="material-icons left">apps</i>Наша продукция</a>
-      </div>
+    <div class="row">
+
     </div>
   </section>
 
@@ -397,13 +391,11 @@
   </section>
 
   <section id="info" class="container">
-    <div class="row">
-      <h2 class="center">Полезная информация</h2>
-    </div>  
+    <h2 class="center">Полезная информация</h2> 
 
     <div class="row">
       <div class="col s12 m4 hide-on-small-only">
-        <img style="width: 100%" src="media/img/info-1.png">
+        <img src="media/img/info-1.png">
       </div>
       <div class="col s12 m8">
         <div>
@@ -425,13 +417,13 @@
         </div>
       </div>
       <div class="col s12 m4 hide-on-small-only">
-        <img style="width: 100%" src="media/img/info-2.png">
+        <img src="media/img/info-2.png">
       </div>
     </div>
 
     <div class="row">
       <div class="col s12 m4 hide-on-small-only">
-        <img style="width: 100%" src="media/img/info-3.png">
+        <img src="media/img/info-3.png">
       </div>
       <div class="col s12 m8">
         <div>
@@ -453,7 +445,7 @@
         </div>
       </div>
       <div class="col s12 m4 hide-on-small-only">
-        <img style="width: 100%" src="media/img/info-4.png">
+        <img src="media/img/info-4.png">
       </div>
     </div>
   </section>
@@ -493,29 +485,27 @@
     <h2 class="center">ОТЗЫВЫ ЗАКАЗЧИКОВ</h2>
     <div class="row">
       <div class="container">
-        <div> 
-          <div class="col s12 m4 offset-m1 l5 offset-l1">
-            <div class="card-panel">
-              <div class="avatar"></div>
-              <p>Семья Мазур,  г. Севастополь</p>
-              <span>
-                «Была в гостях у подруги в Москве и увидела у неё в доме 
-                отделку из 3D панелей. Мне очень понравилось и я решила, 
-                что по приезду обязательно сделаю такой же декор дома. 
-                К сожалению, я не смогла найти нигде в Крыму такого 
-                ассортимента, как в компании Декрафт. Заказала 16 кв 
-                метров - доставили бесплатно! Муж сам положил панели, 
-                это очень просто. Мы очень довольны результатом! Спасибо 
-                за умение работать с клиентами!»
-              </span>
-            </div>
+        <div class="col s12 m6">
+          <div class="card-panel">
+            <div class="avatar"></div>
+            <p>Семья Мазур<br> г. Севастополь</p>
+            <span>
+              «Была в гостях у подруги в Москве и увидела у неё в доме 
+              отделку из 3D панелей. Мне очень понравилось и я решила, 
+              что по приезду обязательно сделаю такой же декор дома. 
+              К сожалению, я не смогла найти нигде в Крыму такого 
+              ассортимента, как в компании Декрафт. Заказала 16 кв 
+              метров - доставили бесплатно! Муж сам положил панели, 
+              это очень просто. Мы очень довольны результатом! Спасибо 
+              за умение работать с клиентами!»
+            </span>
           </div>
         </div>
 
-        <div class="col s12 m4 offset-m1 l5 offset-l1">
+        <div class="col s12 m6">
           <div class="card-panel">
             <div class="avatar"></div>
-            <p>Василий Коркин,  г. Симферополь</p>
+            <p>Василий Коркин<br> г. Симферополь</p>
             <span>
               «Решили с женой в доме сделать ремонт, современный. 
               Начали искать варинты отделочных материалов и 
@@ -533,10 +523,10 @@
 
     <div class="row">
       <div class="container">
-        <div class="col s12 m4 offset-m1 l5 offset-l1">
+        <div class="col s12 m6">
           <div class="card-panel">
             <div class="avatar"></div>
-            <p>Андрей Степнев,<br>управляющий</p>
+            <p>Андрей Степнев<br>управляющий</p>
             <span>
               «Срочно требовалось отреставрировать несущую стену в 
               клинике стоматологии площадью 23м. Искали что-нибудь 
@@ -549,10 +539,10 @@
           </div>
         </div>
 
-        <div class="col s12 m4 offset-m1 l5 offset-l1">
+        <div class="col s12 m6">
           <div class="card-panel">
             <div class="avatar"></div>
-            <p>Илья Морозов,<br>художник</p>
+            <p>Илья Морозов<br>художник</p>
             <span>
               «Уже не знал, как преобразить свою квартиру, без крупных
               в ложений. Узнал о 3D панелях и решил использовать их. 
@@ -574,16 +564,16 @@
   <div id="footer" class="row ">
     <div class="container valign-wrapper">
       <div class="logo col s4"><a href="#"><img src="media/img/logo-footer.png"></a></div>
-      <div class="col s4 valign"><p>+7 (978) 925 25 55</p></div>
+      <div class="col s4 valign"><p><i style="margin: 3px 10px 0 0;" class="material-icons left">phone</i>+7 (978) 925 25 55</p></div>
       <div class="col s4 valign">
-        <p>Республика Крым, г. Севастополь</p>
+        <p>Республика Крым,<br> г. Севастополь</p>
       </div>
     </div> 
   </div>
 
-  <div class="row">
+  <div class="row" style="margin: 0; padding: 20px;"> 
     <div class="container">
-      <div class="copy col s12 center ">
+      <div class="copy col s12 center">
         <div>
           <p>© Copyright 2015 Decraft. All rights reserved. Development by</p>
           <a href="#"><img src="media/img/dev.png"</a>
