--- a/helpmobile/index.html
+++ b/helpmobile/index.html
@@ -3,16 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta name="description" content="Качественный и недорогой ремонт iPhone без визита в мастерскую.">
-    <meta itemprop="name" content="RW Service">
-    <meta itemprop="description" content="Качественный и недорогой ремонт iPhone без визита в мастерскую.">
-    <meta itemprop="image" content="/assets/images/cover.jpg">
-    <meta property="og:title" content="RW Service">
-    <meta property="og:site_name" content="RW Service">
-    <meta property="og:url" content="https://site.ru">
-    <meta property="og:description" content="Качественный и недорогой ремонт iPhone без визита в мастерскую.">
-    <meta property="og:image" content="/assets/images/cover.jpg">
-    <title>RW Service</title>
+    <title>MobileHelp</title>
     <link href="styles/libs.min.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/icons/favicon.png" type="image/png">
