--- a/helpmobile/agreement.html
+++ b/helpmobile/agreement.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta name="description" content="Качественный и недорогой ремонт iPhone без визита в мастерскую.">
-    <meta itemprop="name" content="RW Service">
-    <meta itemprop="description" content="Качественный и недорогой ремонт iPhone без визита в мастерскую.">
+    <meta name="description" content="Качественный и недорогой ремонт телефонов, планшетов и ноутбуков.">
+    <meta itemprop="name" content="HelpMobile">
+    <meta itemprop="description" content="Качественный и недорогой ремонт телефонов, планшетов и ноутбуков.">
     <meta itemprop="image" content="/assets/images/cover.jpg">
-    <meta property="og:title" content="RW Service">
-    <meta property="og:site_name" content="RW Service">
+    <meta property="og:title" content="HelpMobile">
+    <meta property="og:site_name" content="HelpMobile">
     <meta property="og:url" content="https://site.ru">
-    <meta property="og:description" content="Качественный и недорогой ремонт iPhone без визита в мастерскую.">
+    <meta property="og:description" content="Качественный и недорогой ремонт телефонов, планшетов и ноутбуков.">
     <meta property="og:image" content="/assets/images/cover.jpg">
     <title>RW Service</title>
     <link href="styles/libs.min.css" rel="stylesheet">
