--- a/helpmobile/index.html
+++ b/helpmobile/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="Качественный и недорогой ремонт телефонов, планшетов и ноутбуков.">
+    <meta itemprop="name" content="HelpMobile">
+    <meta itemprop="description" content="Качественный и недорогой ремонт телефонов, планшетов и ноутбуков.">
+    <meta itemprop="image" content="/assets/images/cover.jpg">
+    <meta property="og:title" content="HelpMobile">
+    <meta property="og:site_name" content="HelpMobile">
+    <meta property="og:url" content="https://site.ru">
+    <meta property="og:description" content="Качественный и недорогой ремонт телефонов, планшетов и ноутбуков.">
+    <meta property="og:image" content="/assets/images/cover.jpg">
     <title>MobileHelp</title>
     <link href="styles/libs.min.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
